Add edi/view roles
